@startuml
hide methods
left to right direction

class Plataform {
  -String designacao
}

class Freelancer {
  -String name
  -String level of expertise
  -String email
  -String nif
  -String iban
  -String country
  -String adress
}  

class Collaborator {
  -String nome
  -String email
}

class Organization {
  -String nome 
}


Plataform "1" -- "1..*" Organization : possui >

Organization "1" -- "*" Collaborator : possui >

Collaborator "1" -- "0..*" Freelancer : cria >


@enduml